--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds":[
         {
-            "src": "app.js",
-            "use": "@vercel/node"
+            "src": "public/**/*",
+            "use": "@vercel/static"
         }
     ],
     "routes":[
         {
             "src": "(.*)",
-            "dest": "app.js"
+            "dest": "/public/$1"
         }
     ]
   }
