--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,36 @@
 {
     "version": 2,
-    "builds":[
-        {
-            "src": "app.js",
-            "use": "@vercel/node"
-        }
+    "builds": [
+      {
+        "src": "app.js",
+        "use": "@vercel/node"
+      }
     ],
-    "routes":[
-        {
-            "src": "(.*)",
-            "use": "app.js"
-        }
+    "routes": [
+      {
+        "src": "/css/(.*)",
+        "dest": "/public/css/$1"
+      },
+      {
+        "src": "/img/(.*)",
+        "dest": "/public/img/$1"
+      },
+      {
+        "src": "/js/(.*)",
+        "dest": "/public/js/$1"
+      },
+      {
+        "src": "/favicon.ico",
+        "dest": "/public/favicon.ico"
+      },
+      {
+        "src": "/manifest.json",
+        "dest": "/public/manifest.json"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "app.js"
+      }
     ]
   }
+  
