--- a/vercel.json
+++ b/vercel.json
@@ -8,14 +8,17 @@
     ],
     "routes": [
       {
+        "handle": "filesystem",
         "src": "/css/(.*)",
         "dest": "/public/css/"
       },
       {
+        "handle": "filesystem",
         "src": "/img/(.*)",
         "dest": "/public/img/"
       },
       {
+        "handle": "filesystem",
         "src": "/js/(.*)",
         "dest": "/public/js/"
       },
