--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,21 @@
 {
     "version": 2,
-    "public":true,
+    
     "builds": [
       {
         "src": "app.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "public/**",
-        "use": "@vercel/static"
       }
+     
     
     ],
     
       "routes": [
         {
           "src": "/(.*)",
-          "dest": "app.js"
-        },
-        {
-          "src": "/(.*)",
-          "dest": "public/$1"
+          "dest": "/"
         }
+        
       ]
     
   }
