--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
         {
           "src": "/(.*)",
           "dest": "app.js"
+        },
+        {
+          "src": "/(.*)", 
+          "dest": "public/$1"
         }
         
       ]
