--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,31 @@
 {
-    "version": 2,
-    
-    "builds": [
+  "version": 2,
+  
+  "builds": [
+    {
+      "src": "app.js",
+      "use": "@vercel/node"
+    }
+   
+  
+  ],
+  
+  
+    "routes": [
       {
-        "src": "app.js",
-        "use": "@vercel/node"
+        "src": "/(.*)",
+        "dest": "app.js"
+      },
+      {
+        "src": "/public/(css|js|img)/(.*)",
+        "dest": "public/$1/$2"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "app.js"
       }
-     
-    
-    ],
-    
-      "routes": [
-        {
-          "src": "/(.*)",
-          "dest": "app.js"
-        },
-        {
-          "src": "/(.*)", 
-          "dest": "public/$1"
-        }
-        
-      ]
-    
-  }
+    ]
+  
+  
+  
+}
