--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,23 @@
 {
   "version": 2,
-  
   "builds": [
     {
       "src": "app.js",
       "use": "@vercel/node"
     }
-   
-  
   ],
-  
-  
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.js"
-      },
-      {
-        "src": "/public/(css|js|img)/(.*)",
-        "dest": "public/$1/$2"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "app.js"
-      }
-    ]
-  
-  
-  
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "app.js"
+    },
+    {
+      "src": "/public/(.*)",
+      "dest": "public/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "app.js"
+    }
+  ]
 }
