--- a/vercel.json
+++ b/vercel.json
@@ -8,16 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "app.js"
-    },
-    {
-      "src": "/public/(css|js|img)/(.*)", 
-      "dest": "public/$1/$2"
-    },
-    {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "/"
     }
   ]
 }
