--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,14 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "app.js"
+    },
+    {
+      "src": "/public/(css|js|img)/(.*)",
+      "dest": "public/$1/$2"
+    },
+    {
       "src": "/(.*)",
       "dest": "app.js"
     }
